[package]
name = "cordyceps_wavl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

alloc = []
std = ["alloc"]

model = ["std", "proptest"]

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
cordyceps = "0.3.1"
proptest = { version = "1.2.0", optional = true }
sptr = "0.3.2"

[dev-dependencies]
proptest = "1.2.0"
